--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongoose": "^6.0.2",
-    "radix.js": "0.0.1"
+    "radix.js": "0.0.1",
+    "valid-url": "^1.0.9"
   }
 }
